--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <h1 class="hidden">FRUITS</h1>
         <article>
-          <h2>Welcomm to fruits!</h2>
-          <p>Here we have 6 fruits, Banana, Orange, Grapefruit, Passionfruit, Pineapple, and Watermellon!
+          <h2>Welcome to fruits!</h2>
+          <p>Here we have 6 fruits, <span id="yellow">Banana</span>, <span class="orange">Orange</span>, <span id="pink">Grapefruit</span>, <span id="purple">Passionfruit</span>, <span class="orange">Pineapple</span>, and <span id="green">Watermellon</span>!
             These six SVGs were made to visualize 6 drinks flavours! 
           </p>
         </article>
